<resources>
    <string name="app_name">Rijksmuseum</string>
    <string name="database">Rijksmuseum.db</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_detail">Detail</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="message_no_account">Don’t have account ?</string>
    <string name="message_agreement">I Agree with Terms and Condition</string>
    <string name="menu_logout">Logout</string>
    <string name="message_welcome">Welcome, %s</string>
</resources>